<resources>
    <!-- Titles -->
    <string name="app_name">Kronos</string>
    <string name="my_day">My Day</string>
    <string name="goals">Goals</string>
    <string name="history">History</string>

    <!-- MyDayFragment -->

    <string name="button_add_activity">+ Add a new Activity</string>
    <string name="title_activity_my_day">How was your day?</string>
    <string name="textView_myDay_titulo">How was your day?</string>
    <string name="action_setVisibilidadeGrafico">Hide/Show Chart</string>

    <!-- PieChart -->
    <string name="pieChart_description">PieChart of Activities</string>
...

    <!-- Activity Item -->
    <string name="listaAtividadesVazia">There are no Activities in your list in the moment.\nPress \"+ Add a new Activity\" to let Kronos help you :)</string>
    <string name="editText_atividade_nome">Name</string>
    <string name="editText_atividade_horas">hour</string>
    <string name="editText_activityTimeMinute">min</string>
    <string name="editText_cancelar">Cancel</string>
    <string name="editText_activityOK">OK</string>
    <string name="button_adicionar_atividade">+ Add a new Activity</string>
    <string name="activityDefaultName">activity</string>
    <string name="textView_doisPontos">:</string>

    <!-- Rating -->
...
